Kubernetes/istio/prod-peer-auth.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: prod
  namespace: prod
spec:
  mtls:
    mode: STRICT
